card11 is done